--- a/.editorconfig
+++ b/.editorconfig
@@ -11,8 +11,8 @@ trim_trailing_whitespace = true
 [*.md]
 trim_trailing_whitespace = false
 
-[*.{yml,yaml}]
+[*.{yml,yaml,xml}]
 indent_size = 2
 
-[docker-compose.yml]
-indent_size = 4
+[*.{blade.php,js,css,vue}]
+indent_size = 2
