--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,16 @@
         "laravel/tinker": "^2.8.2"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.23.0",
         "laravel/pint": "^1.13.6",
         "mockery/mockery": "^1.6.6",
         "nunomaduro/collision": "^7.10",
+        "pestphp/pest": "^2.24",
+        "pestphp/pest-plugin-laravel": "^2.2",
         "phpunit/phpunit": "^10.4.2",
-        "spatie/laravel-ignition": "^2.3.1"
+        "spatie/laravel-ignition": "^2.3.1",
+        "spatie/laravel-ray": "^1.33"
     },
     "autoload": {
         "psr-4": {
@@ -44,6 +48,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "ide": [
+            "@php artisan ide-helper:models -M"
         ]
     },
     "extra": {
