--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
         "laravel/pint": "^1.13.6",
         "mockery/mockery": "^1.6.6",
         "nunomaduro/collision": "^7.10",
-        "pestphp/pest": "^2.24",
+        "pestphp/pest": "^2.24.3",
         "pestphp/pest-plugin-laravel": "^2.2",
+        "pestphp/pest-plugin-type-coverage": "^2.4",
         "phpunit/phpunit": "^10.4.2",
         "spatie/laravel-ignition": "^2.3.1",
         "spatie/laravel-ray": "^1.33"
