--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "mockery/mockery": "^1.6.6",
         "nunomaduro/collision": "^7.10",
         "pestphp/pest": "^2.24.3",
+        "pestphp/pest-plugin-drift": "^2.5",
         "pestphp/pest-plugin-laravel": "^2.2",
         "pestphp/pest-plugin-type-coverage": "^2.4",
         "phpunit/phpunit": "^10.4.2",
